deploy/k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order-service
          image: tringo.azurecr.io/order-service
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 5003
      targetPort: 5003
