deploy/k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product-service
          image: trisngo/product-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: product-svc
spec:
  selector:
    app: product
  ports:
    - name: product
      protocol: TCP
      port: 5002
      targetPort: 5002
