deploy/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-svc
                port:
                  number: 5001
          - path: /api/products/?(.*)
            pathType: Prefix
            backend:
              service:
                name: product-svc
                port:
                  number: 5002
          - path: /api/order/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 5003
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 5000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 5000
